fix: CORS configuration for Railway + Vercel deployment with environment variable support
Co-authored-by: Cursor <cursoragent@cursor.com>