@@ -1,6 +1,7 @@
 package com.pricehawl.config;
 
 import com.pricehawl.security.JwtAuthFilter;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -10,23 +11,47 @@ import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.*;
 import org.springframework.web.cors.*;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 public class SecurityConfig {
 
+    @Value("${cors.allowed-origins:}")
+    private String allowedOriginsConfig;
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
 
-        // Dùng setAllowedOrigins("*") thay vì setAllowedOriginPatterns
-        // OK vì allowCredentials = false
-        config.setAllowedOrigins(List.of("*"));
+        // Parse comma-separated origins from environment variable
+        List<String> allowedOrigins;
+        if (allowedOriginsConfig != null && !allowedOriginsConfig.trim().isEmpty()) {
+            allowedOrigins = Arrays.asList(allowedOriginsConfig.split(","));
+        } else {
+            // Fallback for local development
+            allowedOrigins = List.of(
+                "http://localhost:5173",
+                "http://localhost:3000",
+                "http://127.0.0.1:5173"
+            );
+        }
 
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        // Use setAllowedOriginPatterns when allowCredentials is true
+        config.setAllowedOriginPatterns(allowedOrigins);
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
-        config.setAllowCredentials(false);
+        config.setAllowCredentials(true);
         config.setMaxAge(3600L);
+
+        // Expose headers that frontend might need
+        config.setExposedHeaders(List.of(
+            "Authorization",
+            "Content-Type",
+            "X-Trending-Computed-At",
+            "X-Trending-Next-Refresh-After",
+            "X-Trending-Cache-Ttl-Seconds"
+        ));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
@@ -48,7 +73,7 @@ public class SecurityConfig {
                         .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
                 )
                 .authorizeHttpRequests(auth -> auth
-                        // Cho phép preflight request từ frontend
+                        // Allow preflight requests
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
 
                         // Auth
@@ -72,21 +97,15 @@ public class SecurityConfig {
                                 "/api/trending-deals/**",
                                 "/api/v1/price-history/**",
                                 "/api/compare/**",
-                                "/api/go/**",               // affiliate redirect
+                                "/api/go/**",
                                 "/api/recommendations/**"
                         ).permitAll()
 
-                        // AI Chat dùng POST nên phải permit riêng
-                        .requestMatchers(HttpMethod.POST,
-                                "/api/ai-chat/**"
-                        ).permitAll()
+                        // AI Chat
+                        .requestMatchers(HttpMethod.POST, "/api/ai-chat/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/ai-chat/**").permitAll()
 
-                        // Nếu sau này có GET cho AI Chat thì cũng cho qua
-                        .requestMatchers(HttpMethod.GET,
-                                "/api/ai-chat/**"
-                        ).permitAll()
-
-                        // Các API còn lại cần đăng nhập
+                        // All other requests need authentication
                         .anyRequest().authenticated()
                 )
                 .addFilterBefore(
